--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "chart.js": "2.9.4",
     "feather-icons-react": "^0.4.3",
+    "firebase": "^9.0.1",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
