--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^3.4.0",
     "react-chartjs-2": "2.11.1",
     "react-collapse": "^5.1.0",
+    "react-csv": "^2.0.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
